# flash-font

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yaml
.github/workflows/: build.yaml  ci.yaml
ass-font/: Cargo.toml  README.md
ass-font/src/: lib.rs  main.rs
flash-font/: Cargo.toml  README.md
flash-font-ass/: Cargo.toml  README.md
flash-font-ass/src/: cli.rs  lib.rs  main.rs
flash-font-injector/: Cargo.toml  README.md
flash-font-injector/src/: error.rs  lib.rs  main.rs  sys.rs
flash-font-injector/src/sys/: unsupported.rs  windows.rs
flash-font/src/: db.rs  error.rs  lib.rs  main.rs  parser.rs  scanner.rs  schema.rs
