[package]
name = "ass-font"
version = "0.2.1"
edition = "2024"
description = "Extract fonts from ASS subtitles."
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
repository = "https://github.com/naganohara-yoshino/flash-font"
documentation = "https://docs.rs/ass-font"
keywords = ["font", "ass", "subtitle", "extraction"]
readme = "README.md"

[dependencies]
camino = "1.2.2"
chardetng = "1.0.0"
encoding_rs = "0.8.34"
