[package]
name = "flash-font-ass"
version = "0.1.0"
edition = "2024"

[dependencies]
flash-font-injector = "0.3.0"
ass-font = "0.2.0"
flash-font = "0.1.0"
etcetera = "0.11.0"
anyhow = "1.0.102"
inquire = "0.9.4"
toml = "1.1.0"

[dependencies.camino]
version = "1.2.2"
features = ["serde1"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.clap]
version = "4.6.0"
features = ["derive"]
