[package]
name = "flash-font-ass"
version = "0.1.1"
edition = "2024"
description = "A font loading library for ASS subtitles."
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
repository = "https://github.com/naganohara-yoshino/flash-font"
documentation = "https://docs.rs/flash-font-ass"
keywords = ["font", "ass", "subtitle", "font-loading"]
readme = "README.md"

[dependencies]
flash-font-injector = "0.5.0"
ass-font = "0.2.1"
flash-font = "0.1.1"
etcetera = "0.11.0"
anyhow = "1.0.102"
inquire = "0.9.4"
toml = "1.1.0"

[dependencies.camino]
version = "1.2.2"
features = ["serde1"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.clap]
version = "4.6.0"
features = ["derive"]
