[package]
name = "flash-font-injector"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]
