[package]
name = "flash-font-injector"
version = "0.1.0"
edition = "2024"
description = "A font loading library."
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
repository = "https://github.com/naganohara-yoshino/flash-font"
documentation = "https://docs.rs/flash-font-injector"
keywords = ["font", "windows", "font-loading", "font-injector"]
readme = "README.md"

[dependencies]
thiserror = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]
