[package]
name = "flash-font"
version = "0.1.0"
edition = "2024"

[dependencies]
flash-font-injector = "0.2.0"
jwalk = "0.8"
ttf-parser = "0.25"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel = { version = "2.3", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
rayon = "1.11"
camino = "1.2"
