[package]
name = "flash-font"
version = "0.1.1"
edition = "2024"
description = "Cache fonts in sqlite"
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
repository = "https://github.com/naganohara-yoshino/flash-font"
documentation = "https://docs.rs/flash-font"
keywords = ["font", "sqlite"]
readme = "README.md"

[dependencies]
ttf-parser = "0.25"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
rayon = "1.12"
camino = "1.2"
walkdir = "2"
memmap2 = "0.9"
thiserror = "2.0"

[dependencies.diesel]
version = "2.3"
features = ["sqlite", "returning_clauses_for_sqlite_3_35"]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61"
features = ["Win32_Storage_FileSystem"]

[target.'cfg(target_os = "linux")'.dependencies.libc]
version = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }
